--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
     defaultConfig {
         applicationId "com.codepath.articlesearch"
         minSdk 23
+
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -22,12 +23,14 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField("String", "API_KEY", apikeyProperties['API_KEY'])
+        //buildConfigField "String", "API_KEY", apikeyProperties["API_KEY"]
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "API_KEY", apikeyProperties['API_KEY'])
         }
     }
 
@@ -42,6 +45,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.codepath.articlesearch'
 }
 
 dependencies {
